// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatShellScreen matches left drawer open snapshot 1`] = `
<View
  className="flex-1 bg-presentation"
  style={
    {
      "backgroundColor": "#ffffff",
    }
  }
>
  <View
    className="flex-1 bg-presentation"
    style={
      {
        "backgroundColor": "#ffffff",
        "paddingTop": 0,
      }
    }
  >
    <View
      className="z-10 flex min-h-[40px] flex-row items-center justify-center bg-presentation px-1"
    >
      <View
        accessibilityLabel="Close sidebar"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="m-1 inline-flex h-10 w-10 items-center justify-center rounded-xl"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="menu-toggle"
      />
      <View
        className="flex flex-1 flex-row items-center justify-center gap-2 overflow-hidden px-2"
      >
        <Text
          className="min-w-0 flex-shrink text-center text-sm text-text-primary"
          numberOfLines={1}
        >
          New Chat
        </Text>
        <View
          className="rounded-full border border-border-light bg-surface-secondary px-2 py-0.5"
        >
          <Text
            className="text-xxs font-medium uppercase tracking-wide text-text-secondary"
          >
            V2.14.25
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="New Chat"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="m-1 inline-flex h-10 w-10 items-center justify-center rounded-xl"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="new-chat-button"
      />
    </View>
    <View
      className="flex flex-row items-center gap-2 px-3 pt-2"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 min-w-[112px] max-w-[160px] flex-row items-center justify-center gap-2 rounded-xl border border-border-light bg-surface-primary px-3 py-2"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="model-trigger"
      >
        <Text
          className="text-sm font-semibold text-text-primary"
        >
          Model
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 flex-row items-center justify-center gap-2 rounded-xl border border-border-light bg-brand-purple-soft px-3"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          className="rounded-full bg-[#eee3ff] px-2 py-0.5"
        >
          <Text
            className="text-xs font-semibold text-brand-purple"
          >
            $5
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 w-10 items-center justify-center rounded-xl border bg-surface-primary border-border-light"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="temporary-toggle"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 w-10 items-center justify-center rounded-xl border border-border-light bg-surface-primary"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 w-10 items-center justify-center rounded-xl border border-border-light bg-surface-hover"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="cerebras-access-toggle"
      />
    </View>
    <View
      className="flex-1 items-center justify-center px-4 pb-14"
    >
      <View
        className="mb-4 h-11 w-11 items-center justify-center rounded-full border border-border-light bg-surface-primary"
      />
      <Text
        className="text-center text-2xl font-semibold text-text-primary"
        testID="greeting-text"
      >
        Good afternoon, Erin Tomorri
      </Text>
      <View
        className="mt-20 w-full items-center"
      >
        <View
          className="h-px w-72 rounded-full bg-border-light/70"
          style={
            {
              "transform": [
                {
                  "rotate": "-4deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
    <View
      className="bg-surface-primary-alt px-0"
      style={
        {
          "paddingBottom": 0,
        }
      }
    >
      <View
        className="rounded-t-[24px] border border-b-0 bg-surface-chat px-4 pb-2 pt-3 border-border-light"
      >
        <TextInput
          className="min-h-9 text-base text-text-primary"
          multiline={true}
          onChangeText={[Function]}
          placeholder="Message Cerebras"
          placeholderTextColor="#595959"
          testID="composer-input"
          value=""
        />
        <View
          className="mt-2 flex flex-row items-center justify-between"
        >
          <View
            className="flex flex-row items-center gap-2"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full border border-border-light bg-surface-primary"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-8 flex-row items-center rounded-full border border-border-light bg-surface-primary px-3"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                className="ml-1 text-xs font-semibold text-text-secondary"
              >
                Memory
              </Text>
            </View>
          </View>
          <View
            className="flex flex-row items-center gap-2"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full bg-surface-hover"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="composer-send-button"
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    className="absolute inset-0 z-20 flex-row"
    pointerEvents="box-none"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="absolute inset-0 bg-overlay-mask"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="left-drawer-overlay"
    />
    <View
      className="h-full w-[82%] border-r border-border-light bg-surface-primary-alt px-4 pb-4"
      style={
        {
          "paddingTop": 12,
        }
      }
      testID="left-drawer"
    >
      <View
        className="mb-2 flex-row items-center justify-between"
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="h-10 w-10 items-center justify-center rounded-xl"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="h-10 w-10 items-center justify-center rounded-xl"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="h-10 w-10 items-center justify-center rounded-xl bg-surface-hover"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        />
      </View>
      <View
        className="mt-1 flex-row items-center gap-2 px-1 py-2"
      >
        <TextInput
          className="flex-1 text-base text-text-primary"
          onChangeText={[Function]}
          placeholder="Search messages"
          placeholderTextColor="#595959"
          testID="drawer-search-input"
          value=""
        />
      </View>
      <View
        className="mt-3 flex-row items-center gap-2 px-1"
      >
        <Text
          className="text-base font-medium text-text-primary"
        >
          Persona Marketplace
        </Text>
      </View>
      <View
        className="mt-8 flex-row items-center justify-between"
      >
        <Text
          className="text-xs font-bold uppercase tracking-wider text-text-tertiary"
        >
          Folders
        </Text>
      </View>
      <View
        className="mt-5 flex-row items-center justify-between"
      >
        <Text
          className="text-base font-bold text-text-primary"
        >
          Chats
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="toggle-chats-expanded"
        />
      </View>
      <View
        className="mt-2 flex-1"
      >
        <View
          className="mb-3"
        >
          <Text
            className="mb-1 text-xs text-text-tertiary"
          >
            Yesterday
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="rounded-md px-2 py-2 "
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="conversation-item-conv_1"
          >
            <View
              className="flex-row items-center gap-2"
            >
              <Text
                className="text-sm text-text-primary"
              >
                Testing: Initiating Dialogue
              </Text>
            </View>
          </View>
        </View>
        <View
          className="mb-3"
        >
          <Text
            className="mb-1 text-xs text-text-tertiary"
          >
            Previous 7 days
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="rounded-md px-2 py-2 "
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="conversation-item-conv_2"
          >
            <View
              className="flex-row items-center gap-2"
            >
              <Text
                className="text-sm text-text-primary"
              >
                Persona ideation checklist
              </Text>
            </View>
          </View>
        </View>
        <View
          className="mb-3"
        >
          <Text
            className="mb-1 text-xs text-text-tertiary"
          >
            Previous 30 days
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            className="rounded-md px-2 py-2 "
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="conversation-item-conv_3"
          >
            <View
              className="flex-row items-center gap-2"
            >
              <Text
                className="text-sm text-text-primary"
              >
                Backboard setup notes
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        className="mt-auto flex-row items-center pt-3"
      >
        <View
          className="h-9 w-9 items-center justify-center rounded-full bg-[#8c7521]"
        >
          <Text
            className="text-xs font-bold text-white"
          >
            ET
          </Text>
        </View>
        <Text
          className="ml-2 flex-1 text-base text-text-primary"
        >
          Erin Tomorri
        </Text>
        <View
          className="rounded-full bg-surface-secondary px-2 py-0.5"
        >
          <Text
            className="text-xxs font-bold text-text-tertiary"
          >
            FREE
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    className="absolute inset-0 z-30"
    pointerEvents="box-none"
  >
    <View
      className="absolute top-1/2 h-16 w-6 items-center justify-center"
      style={
        {
          "marginTop": -32,
          "right": 2,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-16 w-6 items-center justify-center"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="right-rail-toggle"
      />
    </View>
  </View>
</View>
`;

exports[`ChatShellScreen matches main chat snapshot 1`] = `
<View
  className="flex-1 bg-presentation"
  style={
    {
      "backgroundColor": "#ffffff",
    }
  }
>
  <View
    className="flex-1 bg-presentation"
    style={
      {
        "backgroundColor": "#ffffff",
        "paddingTop": 0,
      }
    }
  >
    <View
      className="z-10 flex min-h-[40px] flex-row items-center justify-center bg-presentation px-1"
    >
      <View
        accessibilityLabel="Open sidebar"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="m-1 inline-flex h-10 w-10 items-center justify-center rounded-xl"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="menu-toggle"
      />
      <View
        className="flex flex-1 flex-row items-center justify-center gap-2 overflow-hidden px-2"
      >
        <Text
          className="min-w-0 flex-shrink text-center text-sm text-text-primary"
          numberOfLines={1}
        >
          New Chat
        </Text>
        <View
          className="rounded-full border border-border-light bg-surface-secondary px-2 py-0.5"
        >
          <Text
            className="text-xxs font-medium uppercase tracking-wide text-text-secondary"
          >
            V2.14.25
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="New Chat"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="m-1 inline-flex h-10 w-10 items-center justify-center rounded-xl"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="new-chat-button"
      />
    </View>
    <View
      className="flex flex-row items-center gap-2 px-3 pt-2"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 min-w-[112px] max-w-[160px] flex-row items-center justify-center gap-2 rounded-xl border border-border-light bg-surface-primary px-3 py-2"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="model-trigger"
      >
        <Text
          className="text-sm font-semibold text-text-primary"
        >
          Model
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 flex-row items-center justify-center gap-2 rounded-xl border border-border-light bg-brand-purple-soft px-3"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          className="rounded-full bg-[#eee3ff] px-2 py-0.5"
        >
          <Text
            className="text-xs font-semibold text-brand-purple"
          >
            $5
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 w-10 items-center justify-center rounded-xl border bg-surface-primary border-border-light"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="temporary-toggle"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 w-10 items-center justify-center rounded-xl border border-border-light bg-surface-primary"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 w-10 items-center justify-center rounded-xl border border-border-light bg-surface-hover"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="cerebras-access-toggle"
      />
    </View>
    <View
      className="flex-1 items-center justify-center px-4 pb-14"
    >
      <View
        className="mb-4 h-11 w-11 items-center justify-center rounded-full border border-border-light bg-surface-primary"
      />
      <Text
        className="text-center text-2xl font-semibold text-text-primary"
        testID="greeting-text"
      >
        Good afternoon, Erin Tomorri
      </Text>
      <View
        className="mt-20 w-full items-center"
      >
        <View
          className="h-px w-72 rounded-full bg-border-light/70"
          style={
            {
              "transform": [
                {
                  "rotate": "-4deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
    <View
      className="bg-surface-primary-alt px-0"
      style={
        {
          "paddingBottom": 0,
        }
      }
    >
      <View
        className="rounded-t-[24px] border border-b-0 bg-surface-chat px-4 pb-2 pt-3 border-border-light"
      >
        <TextInput
          className="min-h-9 text-base text-text-primary"
          multiline={true}
          onChangeText={[Function]}
          placeholder="Message Cerebras"
          placeholderTextColor="#595959"
          testID="composer-input"
          value=""
        />
        <View
          className="mt-2 flex flex-row items-center justify-between"
        >
          <View
            className="flex flex-row items-center gap-2"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full border border-border-light bg-surface-primary"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-8 flex-row items-center rounded-full border border-border-light bg-surface-primary px-3"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                className="ml-1 text-xs font-semibold text-text-secondary"
              >
                Memory
              </Text>
            </View>
          </View>
          <View
            className="flex flex-row items-center gap-2"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full bg-surface-hover"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="composer-send-button"
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    className="absolute inset-0 z-30"
    pointerEvents="box-none"
  >
    <View
      className="absolute top-1/2 h-16 w-6 items-center justify-center"
      style={
        {
          "marginTop": -32,
          "right": 2,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-16 w-6 items-center justify-center"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="right-rail-toggle"
      />
    </View>
  </View>
</View>
`;

exports[`ChatShellScreen matches right panel open snapshot 1`] = `
<View
  className="flex-1 bg-presentation"
  style={
    {
      "backgroundColor": "#ffffff",
    }
  }
>
  <View
    className="flex-1 bg-presentation"
    style={
      {
        "backgroundColor": "#ffffff",
        "paddingTop": 0,
      }
    }
  >
    <View
      className="z-10 flex min-h-[40px] flex-row items-center justify-center bg-presentation px-1"
    >
      <View
        accessibilityLabel="Open sidebar"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="m-1 inline-flex h-10 w-10 items-center justify-center rounded-xl"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="menu-toggle"
      />
      <View
        className="flex flex-1 flex-row items-center justify-center gap-2 overflow-hidden px-2"
      >
        <Text
          className="min-w-0 flex-shrink text-center text-sm text-text-primary"
          numberOfLines={1}
        >
          New Chat
        </Text>
        <View
          className="rounded-full border border-border-light bg-surface-secondary px-2 py-0.5"
        >
          <Text
            className="text-xxs font-medium uppercase tracking-wide text-text-secondary"
          >
            V2.14.25
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="New Chat"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="m-1 inline-flex h-10 w-10 items-center justify-center rounded-xl"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="new-chat-button"
      />
    </View>
    <View
      className="flex flex-row items-center gap-2 px-3 pt-2"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 min-w-[112px] max-w-[160px] flex-row items-center justify-center gap-2 rounded-xl border border-border-light bg-surface-primary px-3 py-2"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="model-trigger"
      >
        <Text
          className="text-sm font-semibold text-text-primary"
        >
          Model
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 flex-row items-center justify-center gap-2 rounded-xl border border-border-light bg-brand-purple-soft px-3"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          className="rounded-full bg-[#eee3ff] px-2 py-0.5"
        >
          <Text
            className="text-xs font-semibold text-brand-purple"
          >
            $5
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 w-10 items-center justify-center rounded-xl border bg-surface-primary border-border-light"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="temporary-toggle"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 w-10 items-center justify-center rounded-xl border border-border-light bg-surface-primary"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-10 w-10 items-center justify-center rounded-xl border border-border-light bg-surface-hover"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="cerebras-access-toggle"
      />
    </View>
    <View
      className="flex-1 items-center justify-center px-4 pb-14"
    >
      <View
        className="mb-4 h-11 w-11 items-center justify-center rounded-full border border-border-light bg-surface-primary"
      />
      <Text
        className="text-center text-2xl font-semibold text-text-primary"
        testID="greeting-text"
      >
        Good afternoon, Erin Tomorri
      </Text>
      <View
        className="mt-20 w-full items-center"
      >
        <View
          className="h-px w-72 rounded-full bg-border-light/70"
          style={
            {
              "transform": [
                {
                  "rotate": "-4deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
    <View
      className="bg-surface-primary-alt px-0"
      style={
        {
          "paddingBottom": 0,
        }
      }
    >
      <View
        className="rounded-t-[24px] border border-b-0 bg-surface-chat px-4 pb-2 pt-3 border-border-light"
      >
        <TextInput
          className="min-h-9 text-base text-text-primary"
          multiline={true}
          onChangeText={[Function]}
          placeholder="Message Cerebras"
          placeholderTextColor="#595959"
          testID="composer-input"
          value=""
        />
        <View
          className="mt-2 flex flex-row items-center justify-between"
        >
          <View
            className="flex flex-row items-center gap-2"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full border border-border-light bg-surface-primary"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-8 flex-row items-center rounded-full border border-border-light bg-surface-primary px-3"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                className="ml-1 text-xs font-semibold text-text-secondary"
              >
                Memory
              </Text>
            </View>
          </View>
          <View
            className="flex flex-row items-center gap-2"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              className="h-9 w-9 items-center justify-center rounded-full bg-surface-hover"
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="composer-send-button"
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    className="absolute inset-0 z-30"
    pointerEvents="box-none"
  >
    <View
      className="absolute top-1/2 h-16 w-6 items-center justify-center"
      style={
        {
          "marginTop": -32,
          "right": "84%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="h-16 w-6 items-center justify-center"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="right-rail-toggle"
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="absolute inset-0"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(7,7,7,0.4)",
        }
      }
      testID="right-panel-overlay"
    />
    <View
      className="absolute bottom-0 right-0 top-0 w-[84%] border-l border-border-light bg-surface-primary-alt px-4 pb-4"
      style={
        {
          "paddingTop": 16,
        }
      }
      testID="right-panel"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="mb-2 min-h-11 flex-row items-center rounded-xl border border-border-light bg-surface-primary px-4"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="panel-action-agents"
      >
        <Text
          className="ml-3 text-base font-semibold text-text-primary"
        >
          Persona Builder
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="mb-2 min-h-11 flex-row items-center rounded-xl border border-border-light bg-surface-primary px-4"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="panel-action-prompts"
      >
        <Text
          className="ml-3 text-base font-semibold text-text-primary"
        >
          Prompts
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="mb-2 min-h-11 flex-row items-center rounded-xl border border-border-light bg-surface-primary px-4"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="panel-action-chat-assistant-prompt"
      >
        <Text
          className="ml-3 text-base font-semibold text-text-primary"
        >
          Chat assistant prompt
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="mb-2 min-h-11 flex-row items-center rounded-xl border border-border-light bg-surface-primary px-4"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="panel-action-memories"
      >
        <Text
          className="ml-3 text-base font-semibold text-text-primary"
        >
          Memories
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="mb-2 min-h-11 flex-row items-center rounded-xl border border-border-light bg-surface-primary px-4"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="panel-action-files"
      >
        <Text
          className="ml-3 text-base font-semibold text-text-primary"
        >
          Attach Files
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="mb-2 min-h-11 flex-row items-center rounded-xl border border-border-light bg-surface-primary px-4"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="panel-action-bookmarks"
      >
        <Text
          className="ml-3 text-base font-semibold text-text-primary"
        >
          Bookmarks
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="mb-2 min-h-11 flex-row items-center rounded-xl border border-border-light bg-surface-primary px-4"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="panel-action-mcp-builder"
      >
        <Text
          className="ml-3 text-base font-semibold text-text-primary"
        >
          MCP Settings
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="mb-2 min-h-11 flex-row items-center rounded-xl border border-border-light bg-surface-primary px-4"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="panel-action-hide-panel"
      >
        <Text
          className="ml-3 text-base font-semibold text-text-primary"
        >
          Hide Panel
        </Text>
      </View>
      <View
        className="mt-2 rounded-2xl border border-border-light bg-surface-secondary p-4"
      >
        <View
          className="flex-row items-center gap-2"
        >
          <Text
            className="text-xs font-bold text-text-primary"
          >
            Built on Backboard.io
          </Text>
        </View>
        <Text
          className="mt-3 text-base font-semibold text-text-primary"
        >
          Enterprise workspace setup
        </Text>
        <Text
          className="mt-2 text-xs leading-5 text-text-secondary"
        >
          Get custom guardrails, team controls, and a setup tailored to your company.
        </Text>
        <Text
          className="mt-1 text-xs leading-5 text-text-secondary"
        >
          Our team can help you integrate Backboard.io into your AI stack.
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="mt-3 min-h-11 flex-row items-center justify-center rounded-xl border border-border-light bg-surface-primary"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Text
            className="text-sm font-bold text-text-primary"
          >
            Get started!
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
